@@ -189,6 +189,15 @@ PIDFile			/var/run/pdlna.pid
 # if none is specified, it will be set to 10 megabytes
 #LogFileMaxSize 10
 
+# LogFileRotation
+# specify how many logfiles will be stored, if the logfile's size
+# exceeds the LogFileMaxSize configuration parameter
+# the value zero disables this functionality
+# this parameter will only be relevant, if a file for logging is
+# configured
+# if none is specified, it will be set to 0
+#LogFileRotation	4
+
 # LogLevel
 # specify the loglevel
 # available options
